--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
             <!-- TO DO: CREATE THE NAVIGATION FOR THE SITE HERE -->
             <nav>
                 <ul>
-                    <list><a href="index.html">Home</a></list>
-                    <list><a href="about.html">About</a></list>
-                    <list><a href="#">Contact</a></list>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
              </nav>
         </header>
