--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <!-- TO DO: CREATE THE NAVIGATION FOR THE SITE HERE -->
              <nav>
                 <ul>
-                    <list><a href="#">Home</a></list>
-                    <list><a href="about.html">About</a></list>
-                    <list><a href="contact.html">Contact</a></list>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
              </nav>
         </header>
@@ -111,7 +111,7 @@
 
                 <!-- TO DO: MAKE THE PHONE NUMBER AND EMAIL ADDRESS BELOW INTO PROPERLY FORMATTED LINKS INSIDE OF THE ADDRESS TAG -->
                 <address>
-                    <a href="tel:(555) 555-5555">(555) 555-5555</a>
+                    <a href="tel:5555555555">(555) 555-5555</a>
                     <a href="mailto:j.barnett@asu.edu">Email Jessica Barnett</a>
                 </address>
                 <!-- TO DO: COMPLETE THE LINK BELOW SO THAT IT WILL TAKE THE USER TO THE CONTACT SECTION ON THE CONTACT PAGE WHEN CLICKED -->
